--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -38,7 +38,6 @@
         </button>
         <div class="sidebar-sticky">
             <div class="logo text-center my-4">
-                <img src="~/images/Apptivate_circle _logo.png" alt="Apptivate Logo" class="img-fluid" />
             </div>
             <ul class="nav flex-column">
               
@@ -93,23 +92,28 @@
                             <img src="~/Images/Users.png" alt="Users Icon" class="icon" /><span>Users</span>
                         </a>
                     </li>
+
                     <li class="nav-item">
                         <a class="nav-link text-dark" asp-area="" asp-controller="Analytics" asp-action="AnalyticsReporting">
                             <img src="~/Images/pie-chart.png" alt="Analytics Icon" class="icon" /><span>Analytics</span>
                         </a>
                     </li>
-                }
-            
 
-                <!-- Dummy Table visible only to Admin -->
-                @if (User.IsInRole("Admin"))
-                {
-                    <li class="nav-item">
-                        <a class="nav-link text-dark" asp-area="" asp-controller="DummyTables" asp-action="Index">
-                            <img src="~/svgs/table-alt.svg" alt="Dummy Table Icon" class="icon" /><span>Dummy Table</span>
-                        </a>
-                    </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Logs" asp-action="Index">
+
+                                <img src="~/Images/log.png" alt="Home Icon" class="icon" /><span>System Logs</span>
+                            </a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="DummyTables" asp-action="Index">
+                                <img src="~/svgs/table-alt.svg" alt="Dummy Table Icon" class="icon" /><span>Dummy Table</span>
+                            </a>
+                        </li>
                 }
+
+
             </ul>
 
             <!-- User Profile and Logout Container -->
