--- a/Views/Account/Login.cshtml
+++ b/Views/Account/Login.cshtml
@@ -7,8 +7,10 @@
 }
 
 <link href="~/css/Login.css" rel="stylesheet" type="text/css" />
-
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 <body class="body">
+
+
 
 <div class="login-container">
   
@@ -31,12 +33,13 @@
             </div>
             <button type="submit" class="btn">LOG IN</button>
             <div class="form-footer">
-                <a href="#">Forgot Password?</a><br>
+                <a href="#">Foot Password?</a><br>
                 <span>Don't have an account? <a href="/Account/SelectRole">Register</a></span>
             </div>
         </form>
 </div>
 
-   <script src="~/js/password-toggle.js"></script>
+   <script src="~/js/login.js"></script>
+
 
 </body>
