--- a/Views/Query/StudentQuery/QueryOverview/ViewTicket.cshtml
+++ b/Views/Query/StudentQuery/QueryOverview/ViewTicket.cshtml
@@ -89,7 +89,7 @@
         </div>
 
         <div class="ticket-footer">
-            <a href="@Url.Action("AllTickets", "Query")" class="back-btn">
+            <a href="@Url.Action("Queries", "Query")" class="back-btn">
                 <i class="fas fa-arrow-left"></i>
                 <span>Back to Tickets</span>
             </a>
