Mcebo chats feature implamented into main project

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,5 @@
-﻿﻿
+﻿@RenderSection("Styles", required: false) 
+﻿
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -24,6 +25,7 @@
     <link rel="icon" href="~/Images/favicon-32x32.png" sizes="32x32" type="image/png" />
     <link rel="icon" href="~/Images/favicon-16x16.png" sizes="16x16" type="image/png" />
     <link rel="apple-touch-icon" href="~/Images/apple-touch-icon.png" />
+
 </head>
 <body>
     <header>
@@ -78,8 +80,8 @@
 
                 <!-- Chat visible to all roles -->
                 <li class="nav-item">
-                    <a class="nav-link" href="#">
-                        <img src="~/svgs/chat-round-svgrepo-com (1).svg" alt="Chat Icon" class="icon" /><span>Chats</span>
+                        <a class="nav-link" asp-controller="Chat" asp-action="Chats">
+                            <img src="~/svgs/chat-round-svgrepo-com (1).svg" alt="Chat Icon" class="icon" /><span>Chats</span>
                     </a>
                 </li>
 
